Remove target folder from Git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ migrate_working_dir/
 *.iws
 .idea/
 
-/rust/target/
+cipher_core/rust/target/
 
-example/build
+cipher_core/example/build
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -33,5 +33,5 @@ example/build
 **/doc/api/
 .dart_tool/
 .flutter-plugins-dependencies
-/build/
+./cipher_core/example/build
 /coverage/
